--- a/xg_cus_view/src/assets/css/style.css
+++ b/xg_cus_view/src/assets/css/style.css
@@ -10,3 +10,15 @@ a, img {
   -webkit-touch-callout: none; /*禁止长按链接与图片弹出菜单*/
 }
 
+a { text-decoration:none;}
+
+.clears:after {
+  content: "\0020";
+  display: block;
+  height: 0;
+  clear: both;
+}
+
+.clears {
+  zoom: 1;
+}
