--- a/xg_cus_view/src/assets/css/style.css
+++ b/xg_cus_view/src/assets/css/style.css
@@ -22,3 +22,100 @@ a { text-decoration:none;}
 .clears {
   zoom: 1;
 }
+
+input[type=text]{
+  outline:none;
+  font-size: 1.2rem;
+}
+
+input[type=password]{
+  outline:none;
+  font-size: 1.2rem;
+}
+
+/*@media screen and (min-width:321px) and (max-width:375px){html{font-size:11px}}*/
+/*@media screen and (min-width:376px) and (max-width:414px){html{font-size:12px}}*/
+/*@media screen and (min-width:415px) and (max-width:639px){html{font-size:15px}}*/
+/*@media screen and (min-width:640px) and (max-width:719px){html{font-size:20px}}*/
+/*@media screen and (min-width:720px) and (max-width:749px){html{font-size:22.5px}}*/
+/*@media screen and (min-width:750px) and (max-width:799px){html{font-size:23.5px}}*/
+/*@media screen and (min-width:800px){html{font-size:25px}}*/
+
+.box{
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
+  background-color: #F8F8F8;
+}
+
+.box .bzbox{
+  border-bottom: 1px solid rgba(230, 233, 237, 1);
+}
+
+.box .bz{
+  width: 92%;
+  height: 5rem;
+  margin: 0 auto;
+  background:url(/static/img/information/bz.png) no-repeat center center;
+  background-size: 100% auto
+}
+.box .content{
+  vertical-align: top;
+  background-color: #FFF;
+}
+.box .content .input{
+}
+
+.box .content .input .text{
+  border: none;
+  height: 3.5rem;
+}
+
+dl, dt, dd {
+  display: block;
+}
+
+dl {
+  overflow: hidden;
+  width: 92%;
+  margin: 0 auto;
+  height: 3.5rem;
+  border-bottom: 1px solid rgba(230, 233, 237, 1);
+}
+
+dt {
+  width: 30%;
+  float: left;
+  color: #999999;
+  line-height: 3.5rem;
+}
+
+dd {
+  margin: 0;
+  padding: 0;
+  float: left;
+  color: #333333;
+  line-height: 3.5rem;
+}
+
+.btns{
+  margin-top: 1.5rem;
+}
+
+.btnbox{
+  width: 94%;
+  margin: 0 auto;
+}
+
+.btnbox a{
+  display: block;
+  color: #ffffff;
+  background-color: rgba(241, 2, 22, 1);
+  border-radius: 5px 5px 5px 5px;
+  height: 3rem;
+  text-align: center;
+  line-height: 3rem;
+  font-size: 1.2rem;
+}
