--- a/xg_cus_view/src/assets/css/style.css
+++ b/xg_cus_view/src/assets/css/style.css
@@ -45,6 +45,39 @@ input[type=password]{
 /*@media screen and (min-width:750px) and (max-width:799px){html{font-size:23.5px}}*/
 /*@media screen and (min-width:800px){html{font-size:25px}}*/
 
+/*@media (device-height:568px) and (-webkit-min-device-pixel-ratio:2){!* 兼容iphone5 *!}*/
+/*@media only screen and (max-device-width :480px){ }*/
+/*@media only screen and (min-device-width :481px){ }*/
+
+/*!*6*!*/
+/*@media (min-device-width : 375px) and (max-device-width : 667px) and (-webkit-min-device-pixel-ratio : 2){ }*/
+
+/*!*6+*!*/
+/*@media (min-device-width : 414px) and (max-device-width : 736px) and (-webkit-min-device-pixel-ratio : 3){ }*/
+
+/*!*魅族*!*/
+/*@media only screen and (min-device-width :1080px) and (-webkit-min-device-pixel-ratio : 2.5){ }*/
+
+/*!*mate7*!*/
+/*@media only screen and (min-device-width :1080px) and (-webkit-min-device-pixel-ratio : 3){ }*/
+
+/*!*4 4s*!*/
+/*@media only screen and (device-height :480px) and (-webkit-device-pixel-ratio:2){ }*/
+
+
+input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
+  color:#AAAAAA;
+}
+input:-moz-placeholder, textarea:-moz-placeholder {
+  color:#AAAAAA;
+}
+input::-moz-placeholder, textarea::-moz-placeholder {
+  color:#AAAAAA;
+}
+input:-ms-input-placeholder, textarea:-ms-input-placeholder {
+  color:#AAAAAA;
+}
+
 .box{
   position: absolute;
   top: 0px;
