--- a/xg_cus_view/src/assets/css/style.css
+++ b/xg_cus_view/src/assets/css/style.css
@@ -37,13 +37,14 @@ input[type=password]{
   font-size: 1.2rem;
 }
 
-/*@media screen and (min-width:321px) and (max-width:375px){html{font-size:11px}}*/
-/*@media screen and (min-width:376px) and (max-width:414px){html{font-size:12px}}*/
-/*@media screen and (min-width:415px) and (max-width:639px){html{font-size:15px}}*/
-/*@media screen and (min-width:640px) and (max-width:719px){html{font-size:20px}}*/
-/*@media screen and (min-width:720px) and (max-width:749px){html{font-size:22.5px}}*/
-/*@media screen and (min-width:750px) and (max-width:799px){html{font-size:23.5px}}*/
-/*@media screen and (min-width:800px){html{font-size:25px}}*/
+@media screen and (max-width:320px){html{font-size:14px}}
+@media screen and (min-width:321px) and (max-width:375px){html{font-size:16px}}
+@media screen and (min-width:376px) and (max-width:414px){html{font-size:17px}}
+@media screen and (min-width:415px) and (max-width:639px){html{font-size:20px}}
+@media screen and (min-width:640px) and (max-width:719px){html{font-size:22px}}
+@media screen and (min-width:720px) and (max-width:749px){html{font-size:25px}}
+@media screen and (min-width:750px) and (max-width:799px){html{font-size:30px}}
+@media screen and (min-width:800px){html{font-size:32px}}
 
 /*@media (device-height:568px) and (-webkit-min-device-pixel-ratio:2){!* 兼容iphone5 *!}*/
 /*@media only screen and (max-device-width :480px){ }*/
