--- a/xg_cus_view/src/assets/css/style.css
+++ b/xg_cus_view/src/assets/css/style.css
@@ -46,24 +46,6 @@ input[type=password]{
 @media screen and (min-width:750px) and (max-width:799px){html{font-size:30px}}
 @media screen and (min-width:800px){html{font-size:32px}}
 
-/*@media (device-height:568px) and (-webkit-min-device-pixel-ratio:2){!* 兼容iphone5 *!}*/
-/*@media only screen and (max-device-width :480px){ }*/
-/*@media only screen and (min-device-width :481px){ }*/
-
-/*!*6*!*/
-/*@media (min-device-width : 375px) and (max-device-width : 667px) and (-webkit-min-device-pixel-ratio : 2){ }*/
-
-/*!*6+*!*/
-/*@media (min-device-width : 414px) and (max-device-width : 736px) and (-webkit-min-device-pixel-ratio : 3){ }*/
-
-/*!*魅族*!*/
-/*@media only screen and (min-device-width :1080px) and (-webkit-min-device-pixel-ratio : 2.5){ }*/
-
-/*!*mate7*!*/
-/*@media only screen and (min-device-width :1080px) and (-webkit-min-device-pixel-ratio : 3){ }*/
-
-/*!*4 4s*!*/
-/*@media only screen and (device-height :480px) and (-webkit-device-pixel-ratio:2){ }*/
 
 
 input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
@@ -127,7 +109,7 @@ dt {
   width: 30%;
   float: left;
   color: #999999;
-  line-height: 3.8rem;
+  line-height: 3.6rem;
 }
 
 dd {
@@ -160,4 +142,23 @@ dd {
 
 .readonly {
   color: #666666;
+}
+
+.arrow{
+  float: right;
+  margin-top: 1.2rem;
+  margin-right: 1.2rem;
+  border-right: 1px solid silver;
+  border-bottom: 1px solid silver;
+  width: 0.7rem;
+  height: 0.7rem;
+  transform: rotate(-45deg);
+}
+
+.arrow1 {
+  margin-top: 1.4rem;
+}
+
+.textleft {
+  text-align: right;
 }
