--- a/xg_cus_view/src/assets/css/style.css
+++ b/xg_cus_view/src/assets/css/style.css
@@ -165,3 +165,137 @@ dd {
 .textleft {
   text-align: right;
 }
+
+.box .jb1{
+  position: absolute;
+  background:url(/static/cus/img/register/jb1.png) no-repeat left center;
+  background-size: contain;
+  width: 1.5rem;
+  height: 3rem;
+  top: 1rem;
+  left: 1.5rem;
+}
+
+.box .jb2{
+  position: absolute;
+  background:url(/static/cus/img/register/jb1.png) no-repeat left center;
+  background-size: contain;
+  width: 3rem;
+  height: 6rem;
+  top: -2rem;
+  left: 12rem;
+}
+
+.box .jb3{
+  position: absolute;
+  background:url(/static/cus/img/register/jb1.png) no-repeat left center;
+  background-size: contain;
+  width: 3.5rem;
+  height: 7rem;
+  top: 0.5rem;
+  left: 5.5rem;
+}
+
+.box .jb4{
+  position: absolute;
+  background:url(/static/cus/img/register/jb1.png) no-repeat left center;
+  background-size: contain;
+  width: 3rem;
+  height: 6rem;
+  top: 6rem;
+  left: 3rem;
+}
+
+.box .jb5{
+  position: absolute;
+  background:url(/static/cus/img/register/jb1.png) no-repeat left center;
+  background-size: contain;
+  width: 2rem;
+  height: 4rem;
+  top: 11rem;
+  left: 11rem;
+}
+
+.box .jb6{
+  position: absolute;
+  background:url(/static/cus/img/register/jb1.png) no-repeat left center;
+  background-size: contain;
+  width: 1rem;
+  height: 2rem;
+  top: 15rem;
+  left: 1rem;
+}
+
+.box .jb7{
+  position: absolute;
+  background:url(/static/cus/img/register/jb1.png) no-repeat left center;
+  background-size: contain;
+  width: 1.5rem;
+  height: 3rem;
+  top: 9rem;
+  right: 3rem;
+}
+
+.box .jb8{
+  position: absolute;
+  background:url(/static/cus/img/register/jb1.png) no-repeat left center;
+  background-size: contain;
+  width: 1rem;
+  height: 2rem;
+  top: 9rem;
+  left: 3rem;
+}
+.box .jb9{
+  position: absolute;
+  background:url(/static/cus/img/register/jb1.png) no-repeat left center;
+  background-size: contain;
+  width: 3rem;
+  height: 4rem;
+  top: 4.3rem;
+  right: 6rem;
+}
+.box .jb10{
+  position: absolute;
+  background:url(/static/cus/img/register/jb1.png) no-repeat left center;
+  background-size: contain;
+  width: 0.5rem;
+  height: 2rem;
+  top: 24rem;
+  right: 3rem;
+}
+
+
+.box .contentAlert{
+  width: 15rem;
+  margin: 0 auto;
+  margin-top: 9rem;
+  color: #FFFFFF;
+  text-align: center;
+  font-family: 	Microsoft YaHei;
+}
+.box .contentAlert .img{
+  background:url(/static/cus/img/gongxi.png) no-repeat center center;
+  background-size: contain;
+  height: 8rem;
+  width: 8rem;
+  margin: 0 auto;
+  opacity:0.4;
+  filter:alpha(opacity=40);
+}
+
+.box .contentAlert .msg{
+  text-align: center;
+  width: 13rem;
+  margin: 0 auto;
+  margin-top: 1.5rem;
+  color: #666666;
+  font-size: 1.3rem;
+}
+.box .contentAlert .ok{
+  background:url(/static/cus/img/gongxi.png) no-repeat center center;
+  background-size: contain;
+}
+.box .contentAlert .unlist{
+  background:url(/static/cus/img/unlist.png) no-repeat center center;
+  background-size: contain;
+}
