--- a/xg_cus_view/src/assets/css/style.css
+++ b/xg_cus_view/src/assets/css/style.css
@@ -287,13 +287,31 @@ dd {
   width: 13rem;
   margin: 0 auto;
   margin-top: 1.5rem;
-  color: #666666;
+  color: #999999;
   font-size: 1.3rem;
 }
+
+
+.box .contentAlert .back{
+  display: block;
+  text-align: center;
+  width: 10rem;
+  height: 2.2rem;
+  line-height: 2.2rem;
+  margin: 0 auto;
+  margin-top: 1.5rem;
+  color: #666666;
+  font-size: 1.1rem;
+  border: 1px solid #bbbbbb;
+  border-radius: 4px;
+  background-color: #ffffff;
+}
+
 .box .contentAlert .ok{
   background:url(/static/cus/img/gongxi.png) no-repeat center center;
   background-size: contain;
 }
+
 .box .contentAlert .unlist{
   background:url(/static/cus/img/unlist.png) no-repeat center center;
   background-size: contain;
